--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,32 @@
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: black" [style.display-inside]="">
-  <a class="navbar-brand" style="color:white;">Used cars</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarColor02">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/cars">Cars</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/motorcycles">Motorcycles</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/tags">Tags</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/users">Users</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+<div *ngIf="isLoggedIn">
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: black" [style.display-inside]="">
+    <a class="navbar-brand" style="color:white;">Used cars</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarColor02">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/cars">Cars</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/motorcycles">Motorcycles</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/tags">Tags</a>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" (click)="handleLogout()">Logout</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</div>
+
 <div class="container">
   <router-outlet></router-outlet>
 </div>
